--- a/index.html
+++ b/index.html
@@ -9,58 +9,10 @@
     <!-- Шрифт -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/index2.css">
-    <link rel="stylesheet" href="/css/Amycss.css">
 </head>
 <body>
-    <header class="header"> <!--Верхняя секция сайта-->
-        <article class="header__heading"> <!--Отдельный раздел внутри блока (секции)-->
-            <img src="/img/logo.png" alt="logo" class="header__logo"> <!--Вставка картинок-->
-            <img src="/img/title.png" alt="title" class="header__title">
-        </article>
-        <nav class="header__nav"> <!--Раздел с навигацией-->
-            <ol class="header__navlist"> <!--Создание списка с ссылками-->
-                <li class="header__navitem"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Home</a></li> <!--Новый пункт списка с ссылкой-->
-                <li class="header__navitem"><a href="https://www.youtube.com/watch?v=7h9nRPsO_wk&list=LL&index=19" target="_blank">Show</a></li>
-                <li class="header__navitem"><a href="https://www.youtube.com/shorts/m8eVmjE_pRo?feature=share" target="_blank">About</a></li>
-                <li class="header__navitem"><a href="https://www.youtube.com/watch?v=cdX8r3ZSzN4" target="_blank">Contact</a></li>
-            </ol>
-        </nav>
-        <nav class="header__navuser">
-            <ol class="header__navuserlist">
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/fO7OEGVq44E?feature=share" target="_blank"><img src="/img/account.png" alt="account" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/jvURXwjCIa0?feature=share" target="_blank"><img src="/img/search.png" alt="search" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/hvoYB-Smr6w?feature=share" target="_blank"><img src="/img/heart.png" alt="heart" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/Qgp05kb8t-M?feature=share" target="_blank"><img src="/img/shop.png" alt="shop" class="header__navuserimg"></a></li>
-            </ol>
-        </nav>
-    </header>
-    <section class="firstsection"> <!--Отдельный блок сайта (секция)-->
-        <article class="firstsection__text"> <!--Текстовый блок в первой секции-->
-            <h3 class="firstsection__overheading">New Arrival</h3> <!--Подзаголовок-->
-            <h1 class="firstsection__heading">Discover Our New Collection</h1> <!--Главный заголовок сайта-->
-            <h3 class="firstsection__underheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</h3> <!--Дополнительный текст-->
-            <a href="https://www.youtube.com/shorts/l9J07J5VvPM?feature=share" target="_blank"><img src="/img/buynow.png" alt="buynow" class="firstsection__byenow"></a>
-        </article>
-    </section>
-    <section class="secondsection">
-        <h2 class="secondsection__heading">Browse The Range</h2> <!--Заголовок внутри отдельного блока-->
-        <h3 class="secondsection__underheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        <article class="secondsection__blocks">
-             <article class="secondsection__block">
-                <img src="/img/dining.png" alt="dining" class="secondsection__img">
-                <h4 class="secondsection__textunderimg">Dining</h4> <!--Подпись к картинке-->
-            </article>
-             <article class="secondsection__block">
-                <img src="/img/living.png" alt="living" class="secondsection__img">
-                <h4 class="secondsection__textunderimg">Living</h4>
-            </article>
-            <article class="secondsection__block">
-                <img src="/img/bedroom.png" alt="bedroom" class="secondsection__img">
-                <h4 class="secondsection__textunderimg">Bedroom</h4>
-            </article>
-        </article>
-    </section>
+    
+    <button id="theme-toggle-btn">🌙</button>
 
     <section class="third_screen"> <!-- Третий экран -->
         <p class="title_products">Our Products</p> <!-- Заголовок -->
@@ -206,69 +158,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Пятый экран -->
-    <section class="last_screen">
-        <section > <!-- для группировки  -->
-            <div class = "Afirst__nadnadpic"style="margin-left:592px;">Share your setup with</div><!-- div универсален и использовать его удобнее-->
-            <h1 class= "Afirst__nadpic"style="margin-left:525px;">#FuniroFurniture</h1>
-            <!--h1 подходит по стилю шаблона-->
-            <img src="image/fon.png" alt="polka">
-              <!--<img src="image/ANout.png" alt="nout">
-            <img src="image/AKomnata.png" alt="komnata">
-            <img src="image/AKrovat.png" alt="krovat">
-            <img src="image/Averanda.png" alt="veranda">
-            <img src="image/AKreslo.png" alt="kreslo">  
-            <img src="image/ATaburetky.png" alt="taburetka">
-            <img src="image/ARamka.png" alt="ramka">
-            <img src="image/AKuhna.png" alt="kuhna">-->
-        </section>
-        <section>
-            <div class = "container">
-                <div class = "box1">
-                    <div class = "Funiro">Funiro.</div>
-                    <div class = "box2">
-                        <div class="ASecond__zagalovki">links</div> 
-                        <div class="ASecond__zagalovki">Help</div> 
-                        <div class="ASecond__zagalovki">Newsetter</div>
-                    </div>
-                </div>
-            </div>
-            <div class = "container">
-                <div class="box1">
-                    <div class = "ASecond__orgadress"  style ="margin-bottom: -20px;">400 University Drive Suite 200 Coral</br>
-                        Gables,<br>
-                        Fl 33134 USA</div>
-                 
-                 <div class = "box2">
-                    <div>Home</div>
-                    <div>Paymant options</div>
-                    <div style="text-decoration: underline;">Enter your Email Address SUBCRIBE</div><!--когда буду добавлять скрипты переделать под блок-->
-                 </div>
-                 </div>   
-            </div>
-            <div class = "container">
-                <div class="box2" style="margin-left:440px;">
-                    <div>Shop</div>
-                    <div>Returns</div>
-                </div>
-            </div>
-            <div class = "container">
-                <div class="box2" style="margin-left:440px; margin-top:24px;">
-                    <div>About</div>
-                    <div>Privacy Policies</div>
-                </div>
-            </div>
-            <div class = "container">
-                <div class="box2" style="margin-left:440px; margin-top:24px;">
-                    <div>Contact</div>
-                </div>
-            </div>        
-            <div class = "Asecond__nizpodpic">
-                <p>2023 furino. All rights reverved</p>
-            </div>
-
-        </section>
-    </section>
+    <script src="index.js"></script>
 </body>
 </html>
