--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <p class="title_products">Our Products</p> <!-- Заголовок -->
         <div class="products_container">
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Силзерин: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Syltherine.png" alt="Syltherine">
+                <img src="img/Third Screen/Syltherine.png" alt="Syltherine">
                 <div class="discount">
-                    <img src="/img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
+                    <img src="img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
                     <div class="discount_text">
                         <p>-30%</p>
                     </div>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Левиоса: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Leviosa.png" alt="Здесь могла быть ваша реклама!">
+                <img src="img/Third Screen/Leviosa.png" alt="Здесь могла быть ваша реклама!">
                 <div class="product_text">
                     <p class="product_title">Leviosa</p>
                     <p class="product_description">Stylish cafe chair</p>
@@ -45,9 +45,9 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Лолито: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Lolito.png" alt="Здесь могла быть ваша реклама!">
+                <img src="img/Third Screen/Lolito.png" alt="Здесь могла быть ваша реклама!">
                 <div class="discount">
-                    <img src="/img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
+                    <img src="img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
                     <p class="discount_text">-50%</p>
                 </div>
                 <div class="product_text">
@@ -60,9 +60,9 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Респира: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Respira.png" alt="Respira">
+                <img src="img/Third Screen/Respira.png" alt="Respira">
                 <div class="discount">
-                    <img src="/img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
+                    <img src="img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
                     <p class="discount_text">New</p>
                 </div>
                 <div class="product_text">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Грифо: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Grifo.png" alt="Grifo">
+                <img src="img/Third Screen/Grifo.png" alt="Grifo">
                 <div class="product_text">
                     <p class="product_title">Grifo</p>
                     <p class="product_description">Night lamp</p>
@@ -84,9 +84,9 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Магго: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Muggo.png" alt="Maggo">
+                <img src="img/Third Screen/Muggo.png" alt="Maggo">
                 <div class="discount">
-                    <img src="/img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
+                    <img src="img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
                     <p class="discount_text">New</p>
                 </div>
                 <div class="product_text">
@@ -98,9 +98,9 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Пингки: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Pingky.png" alt="Pingky">
+                <img src="img/Third Screen/Pingky.png" alt="Pingky">
                 <div class="discount">
-                    <img src="/img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
+                    <img src="img/Third Screen/Red Ellipse.png" alt="Red Ellipse">
                     <p class="discount_text">-50%</p>
                 </div>
                 <div class="product_text">
@@ -113,9 +113,9 @@
                 </div>
             </div>
             <div class="product" onclick="window.open('https://drive.google.com/file/d/19_bMX3UZzUJdGAnJkTvWCpkyx7Hh_Xyd/view?usp=drive_link')"> <!-- Потти: контейнер изображения с текстом -->
-                <img src="/img/Third Screen/Potty.png" alt="Potty">
+                <img src="img/Third Screen/Potty.png" alt="Potty">
                 <div class="discount">
-                    <img src="/img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
+                    <img src="img/Third Screen/Green Ellipse.png" alt="Green Ellipse">
                     <p class="discount_text">New</p>
                 </div>
                 <div class="product_text">
@@ -149,12 +149,12 @@
                 </div>
             </div>
             <div class="room_img_container"> <!-- Изображение с текстом -->
-                <img src="/img/Fourth Screen/Bed Room 1.png" alt="Bed Room 1">
+                <img src="img/Fourth Screen/Bed Room 1.png" alt="Bed Room 1">
                 <div class="sub_room_container">
                     <p class="sub_room_small_text">01 — Bed Room</p>
                     <p class="sub_room_title">Inner Peace</p>
                 </div>
-                <img src="/img/Fourth Screen/Bed Room 2.png" alt="Bed Room 2">
+                <img src="img/Fourth Screen/Bed Room 2.png" alt="Bed Room 2">
             </div>
         </div>
     </section>
@@ -162,6 +162,7 @@
 </body>
 
 </html>
+
 
 
 
